tests/config_all_weak/config_all_weak.exp
Error -------------------------------------------------------- no_at_flow.js:3:3

Error: no_at_flow.js:3
  3: x.length;
       ^^^^^^ Cannot get `x.length` because property `length` is missing in uninitialized variable [1].
  References:
    1: var x;
           ^ [1]: uninitialized variable


Found 1 error
